发布安装源码

--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,20 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- 配置maven-source-plugin插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     <profiles>
